--- a/app/src/main/assets/other-licenses.html
+++ b/app/src/main/assets/other-licenses.html
@@ -254,7 +254,7 @@
                 System Reference Document. Copyright 2000. Wizards of the Coast, Inc; Authors:
                 Jonathan Tweet, Monte Cook, Skip Williams, based on material by E. Gary Gygax and
                 Dave Arneson.<br/>
-                Monster Lair. Copyright 2019, Robert Morawa
+                Monster Lair. Copyright 2019, Robert Morawa & Contributors
             </p>
         </div>
         <p>END OF TERMS AND CONDITIONS</p>
