--- a/app/src/main/assets/other-licenses.html
+++ b/app/src/main/assets/other-licenses.html
@@ -329,6 +329,11 @@
             Jason Bulmahn, Stephen Radney-MacFarland, and Mark Seifter.<br/>
             Pathfinder Adventure Path #149: Against the Scarlet Triad © 2019, Paizo Inc.; Authors:
             John Compton, with Tim Nightengale and James L. Sutter.<br/>
+            Pathfinder #150: Broken Promises<br/>
+            Pathfinder Core Rulebook (Second Edition) © 2019, Paizo Inc.; Authors: Logan Bonner,
+            Jason Bulmahn, Stephen Radney-MacFarland, and Mark Seifter.
+            Pathfinder Adventure Path #150: Broken Promises © 2019, Paizo Inc.; Authors: Luis Loza,
+            with James Jacobs, Alex Riggs, and Owen K.C. Stephens.<br/>
             Pathfinder Society Quest #2: Unforgiving Fire<br/>
             Pathfinder Core Rulebook (Second Edition) © 2019, Paizo Inc.; Authors: Logan Bonner,
             Jason Bulmahn, Stephen Radney-MacFarland, and Mark Seifter.<br/>
