--- a/app/src/main/assets/other-licenses.html
+++ b/app/src/main/assets/other-licenses.html
@@ -258,9 +258,19 @@
                 System Reference Document. Copyright 2000. Wizards of the Coast, Inc; Authors:
                 Jonathan Tweet, Monte Cook, Skip Williams, based on material by E. Gary Gygax and
                 Dave Arneson.<br/>
+                <b>Advanced Player's Guide</b><br/>
+                Pathfinder Core Rulebook (Second Edition) © 2019, Paizo Inc.; Authors: Logan Bonner, Jason Bulmahn, Stephen Radney-MacFarland, and Mark Seifter.<br/>
+                Genie, Marid from the Tome of Horrors Complete © 2011, Necromancer Games, Inc., published and distributed by Frog God Games; Author: Scott Greene, based on original material by Gary Gygax.<br/>
+                Pathfinder Advanced Player’s Guide © 2020, Paizo Inc.; Authors: Amirali Attar Olyaee, Alexander Augunas, Kate Baker, Brian Bauman, Logan Bonner, Carlos Cabrera, James Case, Jessica Catalan, John Compton, Paris Crenshaw, Jesse Decker, Fabby Garza Marroquín, Steven Hammond, Sasha Laranoa Harving, Joan Hong, Nicolas Hornyak, Vanessa Hoskins, James Jacobs, Erik Keith, Lyz Liddell, Luis Loza, Ron Lundeen, Patchen Mortimer, Dennis Muldoon, Stephen Radney-MacFarland, Jessica Redekop, Mikhail Rekun, Alex Riggs, David N. Ross, Michael Sayre, Mark Seifter, Kendra Leigh Speedling, Jason Tondro, Clark Valentine, and Andrew White.<br/>
+
                 <b>Age of Ashes Player's Guide</b><br/>
                 Age of Ashes Player’s Guide © 2019, Paizo Inc.; Authors: James Jacobs, with Amanda
                 Hamon.<br/>
+
+                <b>Agents of Edgewatch Player's Guide</b><br/>
+                Pathfinder Core Rulebook (Second Edition) © 2019, Paizo Inc.; Authors: Logan Bonner, Jason Bulmahn, Stephen Radney-MacFarland, and Mark Seifter.<br/>
+                Agents of Edgewatch Player's Guide © 2020, Paizo Inc.; Author: Patrick Renie.<br/>
+
                 <b>Bestiary</b><br/>
                 Daemon, Guardian from the Tome of Horrors Complete © 2011, Necromancer Games, Inc.,
                 published and distributed by Frog God Games; Author: Scott Greene, based on original
@@ -393,14 +403,17 @@
                 John Laffan, Lyz Liddell, Colm Lundberg, Ron Lundeen, Jason Nelson, Randy Price,
                 Jessica Redekop, Patrick Renie, Alistair Rigg, Alex Riggs, David N. Ross, David
                 Schwartz, Mark Seifter, Amber Stewart, Jeffrey Swank, Russ Taylor, and Jason Tondro.<br/>
+
                 <b>Character Guide</b><br/>
                 Genie, Marid from the Tome of Horrors Complete © 2011, Necromancer Games, Inc.,
                 published and distributed by Frog God Games; Author: Scott Greene, based on original
                 material by Gary Gygax.<br/>
+
                 <b>Core Rulebook</b><br/>
                 Pathfinder Core Rulebook (Second Edition) © 2019, Paizo Inc.; Designers: Logan
                 Bonner,
                 Jason Bulmahn, Stephen Radney-MacFarland, and Mark Seifter.<br/>
+
                 <b>Extinction Curse Players Guide</b><br/>
                 Pathfinder Core Rulebook (Second Edition) © 2019, Paizo Inc.; Authors: Logan Bonner,
                 Jason Bulmahn, Stephen Radney-MacFarland, and Mark Seifter.
@@ -439,6 +452,11 @@
                 Case, Adam Daigle, Leo Glass, James Jacobs, Virginia Jordan, Jason Keeley, Jacky
                 Leung, Lyz Liddell, Luis Loza, Ron Lundeen, Matt Morris, Nathan Reinecke, Simone D.
                 Sallé, Michael Sayre, Shahreena Shahrani, Isabelle Thorne, and Diego Valdez.<br/>
+
+                <b>Legends</b><br/>
+                Genie, Marid from the Tome of Horrors Complete © 2011, Necromancer Games, Inc., published and distributed by Frog God Games; Author: Scott Greene, based on original material by Gary Gygax.<br/>
+                Pathfinder Core Rulebook (Second Edition)b> © 2019, Paizo Inc.; Authors: Logan Bonner, Jason Bulmahn, Stephen Radney-MacFarland, and Mark Seifter.<br/>
+                Pathfinder Lost Omens Legends © 2020, Paizo Inc.; Authors: Alexander Augunas, Kate Baker, Jason Bulmahn, Alexandria Bustion, Carlos Cabrera, Calder CaDavid, Jessica Catalan, Natalie Collazo, Ryan Costello, Greg Diaz, Fabby Garza Marroquín, Jaym Gates, Alice Grizzle, Steven Hammond, Nicolas Hornyak, James Jacobs, Michelle Jones, Kristina Sisto Kindel, Aaron Lascano, Ron Lundeen, Stephanie Lundeen, Sydney Meeker, Liane Merciel, Matt Morris, Patchen Mortimer, Hilary Moon Murphy, Dennis Muldoon, Andrew Mullen, Amirali Attar Olyaee, Mikhail Rekun, Michael Sayre, Mark Seifter, Ashton Sperry, Owen K.C. Stephens, and Isabelle Thorne<br/>
 
                 <b>Pathfinder #145: Hellknight Hill</b><br/>
                 Pathfinder Adventure Path #145: Hellknight Hill © 2019, Paizo Inc.; Authors: Amanda
@@ -575,6 +593,11 @@
                 Mikko Kallio, with Andrew Mullen, Nathan Reinecke, David Schwartz, and Scott
                 Young.<br/>
 
+                <b>Pathfinder #156: The Apocalypse Prophet</b><br/>
+                Pathfinder Core Rulebook (Second Edition) © 2019, Paizo Inc.; Authors: Logan Bonner, Jason Bulmahn, Stephen Radney-MacFarland, and Mark Seifter.<br/>
+                Demon Lord, Baphomet from the Tome of Horrors Complete © 2011, Necromancer Games, Inc., published and distributed by Frog God Games; Author: Scott Greene, based on material by Gary Gygax.<br/>
+                Demon Lord, Pazuzu from the Tome of Horrors Complete © 2011, Necromancer Games, Inc., published and distributed by Frog God Games; Author: Scott Greene, based on material by Gary Gygax.<br/>
+                Pathfinder Adventure Path #156: The Apocalypse Prophet © 2020, Paizo Inc.; Authors: Lyz Liddell, with Kevin Bryan, Steven Hammond, Andrew Mullen, Mikhail Rekun, Patrick Renie, and David N. Ross.<br/>
 
                 <b>Pathfinder Society Quest #2: Unforgiving Fire</b><br/>
                 Pathfinder Core Rulebook (Second Edition) © 2019, Paizo Inc.; Authors: Logan Bonner,
@@ -601,6 +624,10 @@
                 <b>The Fall of Plaguestone</b><br/>
                 Pathfinder Adventure: The Fall of Plaguestone © 2019, Paizo Inc.; Author: Jason
                 Bulmahn.<br/>
+
+                <b>The Slithering</b><br/>
+                Pathfinder Core Rulebook (Second Edition) © 2019, Paizo Inc.; Authors: Logan Bonner, Jason Bulmahn, Stephen Radney-MacFarland, and Mark Seifter.
+                Pathfinder Adventure: The Slithering © 2020, Paizo Inc.; Author: Ron Lundeen.<br/>
                 <b>World Guide</b>
                 Genie, Marid from the Tome of Horrors Complete © 2011, Necromancer Games, Inc.,
                 published and distributed by Frog God Games; Author: Scott Greene, based on original
