--- a/app/src/main/res/raw/encounter_template.html
+++ b/app/src/main/res/raw/encounter_template.html
@@ -70,6 +70,15 @@
 
         {{/printHazards}}
 
+
+
+        {{#hasNotes}}
+        <h2>Notes</h2>
+
+        {{notes}}
+
+        {{/hasNotes}}
+
     </body>
 
 </html>
