Upgrade Dependencies and Licenses

--- a/app/src/main/assets/other-licenses.html
+++ b/app/src/main/assets/other-licenses.html
@@ -258,6 +258,10 @@
                 System Reference Document. Copyright 2000. Wizards of the Coast, Inc; Authors:
                 Jonathan Tweet, Monte Cook, Skip Williams, based on material by E. Gary Gygax and
                 Dave Arneson.<br/>
+                <b>Abomination Vaults Player's Guide</b><br/>
+                Pathfinder Core Rulebook (Second Edition) © 2019, Paizo Inc.; Authors: Logan Bonner, Jason Bulmahn, Stephen Radney-MacFarland, and Mark Seifter.
+                Abomination Vaults Player's Guide © 2021, Paizo Inc.; Author: Ron Lundeen, with James Jacobs.
+
                 <b>Advanced Player's Guide</b><br/>
                 Pathfinder Core Rulebook (Second Edition) © 2019, Paizo Inc.; Authors: Logan Bonner, Jason Bulmahn, Stephen Radney-MacFarland, and Mark Seifter.<br/>
                 Genie, Marid from the Tome of Horrors Complete © 2011, Necromancer Games, Inc., published and distributed by Frog God Games; Author: Scott Greene, based on original material by Gary Gygax.<br/>
@@ -270,6 +274,21 @@
                 <b>Agents of Edgewatch Player's Guide</b><br/>
                 Pathfinder Core Rulebook (Second Edition) © 2019, Paizo Inc.; Authors: Logan Bonner, Jason Bulmahn, Stephen Radney-MacFarland, and Mark Seifter.<br/>
                 Agents of Edgewatch Player's Guide © 2020, Paizo Inc.; Author: Patrick Renie.<br/>
+
+                <b>Ancestry Guide</b><br/>
+                The Book of Fiends © 2003, Green Ronin Publishing; Authors: Aaron Loeb, Erik Mona, Chris Pramas, and Robert J. Schwalb. Armies of the Abyss © 2002, Green Ronin Publishing; Authors: Erik Mona and Chris Pramas.
+                The Avatar's Handbook © 2003, Green Ronin Publishing; Authors: Jesse Decker and Chris Thomasson.
+                Book of the Righteous © 2002, Aaron Loeb. Legions of Hell © 2001, Green Ronin Publishing; Author: Chris Pramas.
+                The Unholy Warrior's Handbook © 2003, Green Ronin Publishing; Author: Robert J. Schwalb.
+                Dragon, Faerie from the Tome of Horrors Complete © 2011, Necromancer Games, Inc., published and distributed by Frog God Games; Author: Scott Greene, based on original material by Gary Gygax.
+                Genie, Marid from the Tome of Horrors Complete © 2011, Necromancer Games, Inc., published and distributed by Frog God Games; Author: Scott Greene, based on original material by Gary Gygax.
+                Grippli from the Tome of Horrors Complete © 2011, Necromancer Games, Inc., published and distributed by Frog God Games; Author: Scott Greene, based on original material by Gary Gygax.
+                Pathfinder Core Rulebook (Second Edition) © 2019, Paizo Inc.; Authors: Logan Bonner, Jason Bulmahn, Stephen Radney-MacFarland, and Mark Seifter.
+                Pathfinder Lost Omens Ancestry Guide (Second Edition) © 2021, Paizo Inc.; Authors: Calder CaDavid, James Case, Jessica Catalan, Eleanor Ferron, Lyz Liddell, Luis Loza, Ron Lundeen, Patchen Mortimer, Andrew Mullen, Samantha Phelan, Jessica Redekop, Mikhail Rekun, David N. Ross, Mark Seifter, Owen K.C. Stephens, Isabelle Thorne, and Linda Zayas-Palmer.
+
+                <b>Azarketi Ancestry Web Supplement</b><br/>
+                Pathfinder Core Rulebook (Second Edition) © 2019, Paizo Inc.; Authors: Logan Bonner, Jason Bulmahn, Stephen Radney-MacFarland, and Mark Seifter.
+                Pathfinder Lost Omens Azarketi Ancestry Web Supplement © 2021, Paizo Inc.; Author: Samantha Phelan.
 
                 <b>Bestiary</b><br/>
                 Daemon, Guardian from the Tome of Horrors Complete © 2011, Necromancer Games, Inc.,
@@ -299,6 +318,7 @@
                 Robert G. McCreary, Tim Nightengale, Stephen Radney-MacFarland, Alex Riggs, David N.
                 Ross, Michael Sayre, Mark Seifter, Chris S. Sims, Jeffrey Swank, Jason Tondro, Tonya
                 Woldridge, and Linda Zayas-Palmer.<br/>
+
                 <b>Bestiary 2</b><br/>
                 Angel, Monadic Deva from the Tome of Horrors Complete © 2011, Necromancer Games,
                 Inc., published and distributed by Frog God Games; Author: Scott Greene, based on
@@ -403,6 +423,10 @@
                 John Laffan, Lyz Liddell, Colm Lundberg, Ron Lundeen, Jason Nelson, Randy Price,
                 Jessica Redekop, Patrick Renie, Alistair Rigg, Alex Riggs, David N. Ross, David
                 Schwartz, Mark Seifter, Amber Stewart, Jeffrey Swank, Russ Taylor, and Jason Tondro.<br/>
+
+                <b>Bestiary 3</b><br/>
+                Flumph from the Tome of Horrors Complete © 2011, Necromancer Games, Inc., published and distributed by Frog God Games; Author: Scott Greene, based on original material by Ian McDowell and Douglas Naismith.
+                Pathfinder Bestiary 3 (Second Edition) © 2021, Paizo Inc.; Authors: Logan Bonner, James Case, Jessica Catalan, John Compton, Paris Crenshaw, Adam Daigle, Katina Davis, Erik Scott de Bie, Jesse Decker, Brian Duckwitz, Hexe Fey, Keith Garrett, Matthew Goodall, Violet Gray, Alice Grizzle, Steven Hammond, Sasha Laranoa Harving, Joan Hong, James Jacobs, Michelle Jones, Virginia Jordan, TJ Kahn, Mikko Kallio, Jason Keeley, Joshua Kim, Avi Kool, Jeff Lee, Lyz Liddell, Luis Loza, Ron Lundeen, Philippe-Antoine Menard, Patchen Mortimer, Dennis Muldoon, Andrew Mullen, Quinn Murphy, Dave Nelson, Jason Nelson, Samantha Phelan, Stephen Radney-MacFarland, Danita Rambo, Shiv Ramdas, BJ Recio, Jessica Redekop, Mikhail Rekun, Patrick Renie, Alex Riggs, David N. Ross, Simone D. Sallé, Michael Sayre, Mark Seifter, Sen.H.H.S, Abigail Slater, Rodney Sloan, Shay Snow, Pidj Sorensen, Kendra Leigh Speedling, Tan Shao Han, William Thompson, Jason Tondro, Clark Valentine, Ruvaid Virk, Skylar Wall, Andrew White, and Landon Winkler.
 
                 <b>Character Guide</b><br/>
                 Genie, Marid from the Tome of Horrors Complete © 2011, Necromancer Games, Inc.,
@@ -599,6 +623,54 @@
                 Demon Lord, Pazuzu from the Tome of Horrors Complete © 2011, Necromancer Games, Inc., published and distributed by Frog God Games; Author: Scott Greene, based on material by Gary Gygax.<br/>
                 Pathfinder Adventure Path #156: The Apocalypse Prophet © 2020, Paizo Inc.; Authors: Lyz Liddell, with Kevin Bryan, Steven Hammond, Andrew Mullen, Mikhail Rekun, Patrick Renie, and David N. Ross.<br/>
 
+                <b>Pathfinder #157: Devil at the Dreaming Palace</b><br/>
+                Pathfinder Core Rulebook (Second Edition) © 2019, Paizo Inc.; Authors: Logan Bonner, Jason Bulmahn, Stephen Radney-MacFarland, and Mark Seifter.
+                Carbuncle from the Tome of Horrors Complete © 2011, Necromancer Games, Inc., published and distributed by Frog God Games; Author: Scott Greene, based on original material by Albie Fiore.
+                Pathfinder Adventure Path #157: Devil at the Dreaming Palace © 2020, Paizo Inc.; Authors: James L. Sutter, with Luis Loza, Andrew Mullen, Samantha Phelan, and Patrick Renie.
+
+                <b>Pathfinder #158: Sixty Feet Under</b><br/>
+                Pathfinder Core Rulebook (Second Edition) © 2019, Paizo Inc.; Authors: Logan Bonner, Jason Bulmahn, Stephen Radney-MacFarland, and Mark Seifter.
+                Daemon, Guardian from the Tome of Horrors Complete © 2011, Necromancer Games, Inc., published and distributed by Frog God Games; Author: Scott Greene, based on original material by Ian McDowall.
+                Pathfinder Adventure Path #158: Sixty Feet Under © 2020, Paizo Inc.; Authors: Michael Sayre, with Saif Ansari, Leo Glass, Ron Lundeen, Jacob W. Michaels, Patrick Renie, and David N. Ross.
+
+                <b>Pathfinder #159: All or Nothing</b><br/>
+                Pathfinder Core Rulebook (Second Edition) © 2019, Paizo Inc.; Authors: Logan Bonner, Jason Bulmahn, Stephen Radney-MacFarland, and Mark Seifter.
+                Daemon, Piscodaemon from the Tome of Horrors Complete © 2011, Necromancer Games, Inc., published and distributed by Frog God Games; Author: Scott Greene, based on original material by Gary Gygax.
+                Pathfinder Adventure Path #159: All or Nothing © 2020, Paizo Inc.; Authors: Jason Keeley, with Alexander Augunas, Jessica Catalan, Stephen Glicker, Mike Kimmel, Alex Riggs, and Mike Welham.
+
+                <b>Pathfinder #160: Assault on Hunting Lodge Seven</b><br/>
+                Pathfinder Core Rulebook (Second Edition) © 2019, Paizo Inc.; Authors: Logan Bonner, Jason Bulmahn, Stephen Radney-MacFarland, and Mark Seifter.
+                Pathfinder Adventure Path #160: Assault on Hunting Lodge Seven © 2020, Paizo Inc.; Authors: Ron Lundeen, with Luis Loza and Hilary Moon Murphy.
+
+                <b>Pathfinder #161: Belly of the Black Whale</b><br/>
+                Pathfinder Core Rulebook (Second Edition) © 2019, Paizo Inc.; Authors: Logan Bonner, Jason Bulmahn, Stephen Radney-MacFarland, and Mark Seifter.
+                Pathfinder Adventure Path #161: Belly of the Black Whale © 2020, Paizo Inc.; Authors: Cole Kronewitter, with Kim Frandsen, Patchen Mortimer, Kyle T. Raes, Andrew White, and Brian Yaksha.
+
+                <b>Pathfinder #162: Ruins of the Radiant Siege</b><br/>
+                Pathfinder Core Rulebook (Second Edition) © 2019, Paizo Inc.; Authors: Logan Bonner, Jason Bulmahn, Stephen Radney-MacFarland, and Mark Seifter.
+                Pathfinder Adventure Path #162: Ruins of the Radiant Siege © 2020, Paizo Inc.; Authors: Amber Stewart, with Carlos Cabrera, Benjamin U. Fields, Kim Frandsen, Jim Groves, John S. Roberts, and Diego Valdez.
+
+                <b>Pathfinder #163: Ruins of Gauntlight</b><br/>
+                Pathfinder Core Rulebook (Second Edition) © 2019, Paizo Inc.; Authors: Logan Bonner, Jason Bulmahn, Stephen Radney-MacFarland, and Mark Seifter.
+                Soul Eater from the Tome of Horrors Complete © 2011, Necromancer Games, Inc., published and distributed by Frog God Games; Author: Scott Greene, based on original material by David Cook.
+                Pathfinder Adventure Path #163: Ruins of Gauntlight © 2021, Paizo Inc.; Author: James Jacobs.
+
+                <b>Pathfinder #164: Hands of the Devil</b><br/>
+                Skulk from the Tome of Horrors Complete © 2011, Necromancer Games, Inc., published and distributed by Frog God Games; Author: Scott Greene, based on original material by Simon Muth.
+                Pathfinder Core Rulebook (Second Edition) © 2019, Paizo Inc.; Authors: Logan Bonner, Jason Bulmahn, Stephen Radney-MacFarland, and Mark Seifter.
+                Pathfinder Adventure Path #164: Hands of the Devil © 2021, Paizo Inc.; Authors: Vanessa Hoskins, with Ron Lundeen, Quinn Murphy, and Amber Stewart.
+
+                <b>Pathfinder #165: Eyes of Empty Death</b><br/>
+                Pathfinder Core Rulebook (Second Edition) © 2019, Paizo Inc.; Authors: Logan Bonner, Jason Bulmahn, Stephen Radney-MacFarland, and Mark Seifter.
+                Daemon, Guardian from the Tome of Horrors Complete © 2011, Necromancer Games, Inc., published and distributed by Frog God Games; Author: Scott Greene, based on original material by Ian McDowall.
+                Daemon, Derghodaemon from the Tome of Horrors Complete © 2011, Necromancer Games, Inc., published and distributed by Frog God Games; Author: Scott Greene, based on original material by Gary Gygax.
+                Froghemoth from the Tome of Horrors Complete © 2011, Necromancer Games, Inc., published and distributed by Frog God Games; Author: Scott Greene, based on original material by Gary Gygax.
+                Pathfinder Adventure Path #165: Eyes of Empty Death © 2021, Paizo Inc.; Authors: Stephen Radney- MacFarland, with James Jacobs and Mikhail Rekun.
+
+                <b>Pathfinder Society Quest #10: The Broken Scales</b><br/>
+                Pathfinder Core Rulebook (Second Edition) © 2019, Paizo Inc.; Authors: Logan Bonner, Jason Bulmahn, Stephen Radney-MacFarland, and Mark Seifter.
+                Pathfinder Society Quest #10: The Broken Scales © 2020, Paizo Inc.; Amber Stewart.
+
                 <b>Pathfinder Society Quest #2: Unforgiving Fire</b><br/>
                 Pathfinder Core Rulebook (Second Edition) © 2019, Paizo Inc.; Authors: Logan Bonner,
                 Jason Bulmahn, Stephen Radney-MacFarland, and Mark Seifter.<br/>
@@ -621,6 +693,19 @@
                 Jason Bulmahn, Stephen Radney-MacFarland, and Mark Seifter.<br/>
                 Pathfinder Society Scenario #1–15: The Blooming Catastrophe © 2020, Paizo Inc.;
                 Author: Mikhail Rekun.<br/>
+
+                <b>Pathfinder Society Scenario #1-17: The Perennial Crown Part 2, The Thorned Monarch</b><br/>
+                Pathfinder Core Rulebook (Second Edition) © 2019, Paizo Inc.; Authors: Logan Bonner, Jason Bulmahn, Stephen Radney-MacFarland, and Mark Seifter.
+                Pathfinder Society Scenario #1–17: The Perennial Crown Part 2: The Thorned Monarch © 2020, Paizo Inc.; Author: Alexander Augunas.
+
+                <b>Pathfinder Society Scenario #1-19: Iolite Squad Alpha</b><br/>
+                Pathfinder Core Rulebook (Second Edition) © 2019, Paizo Inc.; Authors: Logan Bonner, Jason Bulmahn, Stephen Radney-MacFarland, and Mark Seifter.
+                Pathfinder Society Scenario #1–19: Iolite Squad Alpha © 2020, Paizo Inc.; Author: Mike Kimmel.
+
+                <b>Pathfinder Society Scenario #1-24: Lightning Strikes, Stars Fall</b><br/>
+                Pathfinder Core Rulebook (Second Edition) © 2019, Paizo Inc.; Authors: Logan Bonner, Jason Bulmahn, Stephen Radney-MacFarland, and Mark Seifter.
+                Pathfinder Society Scenario #1–24: Lightning Strikes, Stars Fall © 2020, Paizo Inc.; Author: Vanessa Hoskins
+
                 <b>The Fall of Plaguestone</b><br/>
                 Pathfinder Adventure: The Fall of Plaguestone © 2019, Paizo Inc.; Author: Jason
                 Bulmahn.<br/>
@@ -628,6 +713,11 @@
                 <b>The Slithering</b><br/>
                 Pathfinder Core Rulebook (Second Edition) © 2019, Paizo Inc.; Authors: Logan Bonner, Jason Bulmahn, Stephen Radney-MacFarland, and Mark Seifter.
                 Pathfinder Adventure: The Slithering © 2020, Paizo Inc.; Author: Ron Lundeen.<br/>
+
+                <b>Troubles in Otari</b><br/>
+                Pathfinder Core Rulebook (Second Edition) © 2019, Paizo Inc.; Authors: Logan Bonner, Jason Bulmahn, Stephen Radney-MacFarland, and Mark Seifter.
+                Pathfinder Adventure: Troubles in Otari © 2020, Paizo Inc.; Authors: Jason Keeley, Lyz Liddell, and Ron Lundeen.
+
                 <b>World Guide</b>
                 Genie, Marid from the Tome of Horrors Complete © 2011, Necromancer Games, Inc.,
                 published and distributed by Frog God Games; Author: Scott Greene, based on original
